--- a/src/components/GlobalStyles/GlobalStyles.sass
+++ b/src/components/GlobalStyles/GlobalStyles.sass
@@ -104,7 +104,7 @@ iframe
 .hover-pointer
     &:hover
         cursor: pointer
-.b4E__text
+.NaL__text
     display: inline
     user-select: none
     & div
