--- a/src/containers/app/screens/Feature/pages/Demo/Admin/ManageBooks/Book/SettingBook.module.css
+++ b/src/containers/app/screens/Feature/pages/Demo/Admin/ManageBooks/Book/SettingBook.module.css
@@ -11,7 +11,7 @@
     padding-right: 300px;
     padding-top: 30px;
     /*padding-bottom: 50px;*/
-    /*background-color: #9FFCFD;*/
+    background-color: #dcdcdc;
     /*border-radius: 5px;*/
     width: 100%;
 }
