--- a/src/containers/app/screens/Feature/pages/Demo/Admin/ManageReaders/PersonalImformation/PersonalImformation.module.sass
+++ b/src/containers/app/screens/Feature/pages/Demo/Admin/ManageReaders/PersonalImformation/PersonalImformation.module.sass
@@ -11,8 +11,8 @@
     padding-right: 100px
     padding-top: 50px
     padding-bottom: 50px
-    background-color: #9FFCFD
-    border-radius: 5px
+    background-color: #dcdcdc
+    border-radius: 10px
     width: 100%
 .Demo_imformation__10AQw
     left: 100px
