--- a/src/containers/app/screens/Feature/pages/Demo/User/UserCard/RegistCard/RegistCard.module.sass
+++ b/src/containers/app/screens/Feature/pages/Demo/User/UserCard/RegistCard/RegistCard.module.sass
@@ -17,7 +17,7 @@
     padding-right: 100px
     padding-top: 50px
     padding-bottom: 50px
-    background-color: #9FFCFD
+    background-color: #dcdcdc
     border-radius: 5px
     width: 100%
 .Demo_imformation__10AQw
